<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EchoAssistant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Alexa Assistant</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Settings -->
    <string name="Modes">Application Modes</string>
    <string name="Themes">Themes</string>
    <string name="Font">Font and Font Size</string>
    <string name="apply">Apply Settings</string>
    <string name="btnApply">Apply</string>


    <!-- Modes -->
    <string name="Aloud">Speak Commands Aloud</string>
    <string name="silentComs">Communicate Silently With Alexa</string>

    <!-- Themes -->
    <string name="DarkMode">Dark Mode</string>
    <string name="HighCon">High Contrast Mode</string>


    <!-- Strings for display text on buttons -->
    <string name="alexaComs">Alexa Commands</string>
    <string name="smartHome">Smart Home Commands</string>
    <string name="extraCommand">Extra Commands</string>


    <string name="daily_brief">Daily Brief</string>
    <string name="what_are_my_notifications">What are my Notifications?</string>
    <string name="what_is_the_time">What is the time?</string>
    <string name="weather_report">Weather Report</string>
    <string name="what_is_the_date">What is the date?</string>


    <string name="title_activity_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_the_news">What is the news?</string>
    <string name="back">Back</string>
    <string name="lightsOn">Turn Lights on</string>
    <string name="turn_lights_off">Turn lights off</string>
    <string name="increase_temperature">Increase Temperature</string>
    <string name="what_is_the_temperature">What is the temperature?</string>
    <string name="decrease_temperature">Decrease Temperature</string>
    <string name="set_lights_to_50">Set lights to 50%</string>
    <string name="play_music">Play music</string>
    <string name="pause">Pause</string>
    <string name="set_a_5_minute_timer">Set a 5 minute Timer</string>
    <string name="how_long_left_on_my_timer">How long left on my timer?</string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="what_is_on_my_shopping_list">What is on my shopping list?</string>
    <string name="ButtonApp">ButtonAppearance</string>


</resources>