<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/Modes">

        <SwitchPreferenceCompat
            app:key="Aloud"
            app:title="@string/Aloud"
             />

        <SwitchPreferenceCompat
            app:key="AlexaComs"
            app:title="@string/silentComs"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Themes">

        <SwitchPreferenceCompat
            app:key="DarkMode"
            app:title="@string/DarkMode" />


        <SwitchPreferenceCompat
            app:key="HighContrast"
            app:title="@string/HighCon" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/Font">


        <ListPreference
            android:defaultValue="arial"
            android:entries="@array/reply_entries"
            android:entryValues="@array/reply_entries"
            android:key="FontType"
            android:title="Font" />

        <SeekBarPreference
            android:key="FontSize"
            android:title="Font Size"
            />
    </PreferenceCategory>



</PreferenceScreen>