<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlexaCommands">

    <Button
        android:id="@+id/btnWeather"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/weather_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDailyBreif"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/daily_brief"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDate"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        android:text="@string/what_is_the_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnDailyBreif" />

    <Button
        android:id="@+id/btnNotifications"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        android:text="@string/what_are_my_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnDate" />

    <Button
        android:id="@+id/btnNews"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        android:text="@string/what_is_the_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTime" />

    <Button
        android:id="@+id/btnTime"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        android:text="@string/what_is_the_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnWeather" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="372dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/btnNotifications"
        app:layout_constraintTop_toBottomOf="@id/btnNotifications" />
</androidx.constraintlayout.widget.ConstraintLayout>