<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmartHome">

    <!-- TODO: Update blank fragment layout -->


    <Button
        android:id="@+id/BtnSmartHomeToHome"
        android:layout_width="372dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWhatTemp" />

    <Button
        android:id="@+id/btnLightsOn"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:text="@string/lightsOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTempUp"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        android:text="@string/increase_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnLightsOn" />

    <Button
        android:id="@+id/btnWhatTemp"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="184dp"
        android:text="@string/what_is_the_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTempUp" />

    <Button
        android:id="@+id/btnLightsDim"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        android:text="@string/set_lights_to_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTempUp" />

    <Button
        android:id="@+id/btnTempDown"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="8dp"
        android:text="@string/decrease_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnLightsOff" />

    <Button
        android:id="@+id/btnLightsOff"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/turn_lights_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>